--- a/faq/index.html
+++ b/faq/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Unplugged Retreat | FAQ</title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -30,8 +30,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html">FAQ</a></li>
-          <li><a href="about/index.html">About</a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -39,11 +39,55 @@
 
   <main>
 
-    <section>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+        </div>
+      </div>
+      <!-- mission content wrapper ends -->
+    </section>
+    <!-- contact-info -->
+
+    <section class="map">
+      <figure>
+      </figure>
     </section>
 
-    <aside>
-    </aside>
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <div class="contact-content">
+          <div>
+          <h4>General Information</h4>
+          <address>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <address>
+              <p>
+                555-555-5556<br>
+                facilitator@unplugged.com
+              </p>
+            </address>
+          </div>
+          <!-- contact-content div ends -->
+        </div>
+        <!-- contact content wrapper ends -->
+        </div>
+    </section>
 
   </main>
   <!-- main wrapper -->
