--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,10 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+ 
+  <!-- Google Fonts --> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@400;700&family=Figtree:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
