Google Map iframe code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="">
 
@@ -11,13 +12,10 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Akshar:wght@400;700&family=Figtree:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -122,6 +120,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+            <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people at an outdoor retreat.">
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
