--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
   <!-- Google Fonts --> 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@400;700&family=Figtree:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/b6921ff44b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
