--- a/faq/index.html
+++ b/faq/index.html
@@ -18,8 +18,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@400;700&family=Figtree:wght@500;700&display=swap" rel="stylesheet">
-</head>
 
+<script src="https://kit.fontawesome.com/b6921ff44b.js" crossorigin="anonymous"></script></head>
 <body>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
